--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-title: Find more about me at https://linktr.ee/bhaikopath
+title: Hi there I am a prefinal year CS undergrad at IEM Kolkata
