--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Hi there I am a prefinal year CS undergrad at IEM Kolkata
+title: Detecting Ships using Deep Learning
 url: https://linktr.ee/bhaikopath
